Fix DataType generics
Add wildcard to DataType definitions to fix compiler warnings and issues.